# ezn-file-dialog

./: CMakeLists.txt  README.md
include/: ezn_fd_common.h  ezn_file_dialog.h
src/: ezn_fd_zenity.cpp
